# PyrogramTestTask

./: .gitignore  LICENSE  README.md  pyproject.toml
bot/: __init__.py  main.py
bot/database/: base.py  engine.py  models.py  user.py
bot/handlers/: __init__.py  admin.py  user.py
bot/utils/: custom_client.py  custom_scheduler.py
