[tool.poetry]
name = "pyrogramtesttask"
version = "0.1.0"
description = ""
authors = ["skirt-owner <skirtsfield@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
greenlet = "^3.0.1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
